--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       </nav>
     </main>
 
-    <script type="module" src="src/game.js"></script>
+    <script type="module" src="src/game.mjs"></script>
   </body>
 </html>
